--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.2",
+    "quill-to-pdf": "^1.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
