--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.474.0",
+    "qrcode.react": "^4.2.0",
     "quill-to-pdf": "^1.0.7",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
