--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
+    "lz-string": "^1.5.0",
     "qrcode.react": "^4.2.0",
     "quill-to-pdf": "^1.0.7",
     "react": "^18.3.1",
